--- a/cimet-api-server/package.json
+++ b/cimet-api-server/package.json
@@ -11,6 +11,7 @@
   "author": "Amit Patni",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "needle": "^3.2.0"
   },
